
  [ Pino Toscano ]
  * Import patch 0001-consider-Hurd-as-a-POSIX-system.patch from src:luajit as
    luajit-hurd.diff to support Hurd in the embedded luajit copy.
  * Use DEB_HOST_ARCH rather than DEB_HOST_ARCH_CPU to use the embedded zziplib
    copy on any i386 architecture, not only on Linux, as the problem applies
    regardless of the OS.
  * Enable the luajit support also on hurd-amd64.

 -- Debian TeX Task Force <debian-tex-maint@lists.debian.org>  Sun, 17 Aug 2025 09:38:50 +0200

texlive-bin (2025.20250727.75242+ds-4) unstable; urgency=medium

  * Upload to unstable.

 -- Hilmar Preuße <hille42@debian.org>  Thu, 14 Aug 2025 22:37:17 +0200

texlive-bin (2025.20250727.75242+ds-3) experimental; urgency=medium

  * Disable zziplib test suite.

 -- Hilmar Preuße <hille42@debian.org>  Tue, 05 Aug 2025 23:52:44 +0200

texlive-bin (2025.20250727.75242+ds-2) experimental; urgency=medium

  * Build with embedded zziplib on i386.

 -- Hilmar Preuße <hille42@debian.org>  Mon, 04 Aug 2025 22:46:53 +0200

texlive-bin (2025.20250727.75242+ds-1) experimental; urgency=medium

  * New version TL 2025.
    - Contains fix for manual pages (Closes: #991944).
  * Lower C standard to C17. This is assumed to be a workaround for
    #1097988.
  * Remove (incompatible) getenv, strtok & strstr declaration from
    kpathsea headers. (Closes: #1109256).
    https://tug.org/pipermail/tex-live/2025-July/051609.html

 -- Hilmar Preuße <hille42@debian.org>  Sun, 27 Jul 2025 23:14:41 +0200

texlive-bin (2024.20240313.70630+ds-6) unstable; urgency=medium

  * Patches for manual pages thanks to Bjarni Ingi Gislason
    <bjarniig@simnet.is>.
    - aleph.1 (Closes: #1088318)
    - autosp.1 (Closes: #1088853)
    - opl2ofm.1 (Closes: #1091540)
    - outocp.1: (Closes: #1091615)
    - ovf2ovp.1 (Closes: #1091618)
    - ovp2ovf.1 (Closes: #1091630)
  * Remove mflua.1 from texlive-binaries, it is/will be shipped by
    texlive-extra-utils.
