@@ -7,6 +7,7 @@ texlive-bin (2025.20250727.75242+ds-5) UNRELEASED; urgency=medium
     copy on any i386 architecture, not only on Linux, as the problem applies
     regardless of the OS.
   * Enable the luajit support also on hurd-amd64.
+  * Add a workaround for missing automake dependencies in single job builds.
 
  -- Debian TeX Task Force <debian-tex-maint@lists.debian.org>  Sun, 17 Aug 2025 09:38:50 +0200
 
